--- a/Sample2.ipynb
+++ b/Sample2.ipynb
@@ -2,110 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/py35/lib/python3.5/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Default GPU Device: /device:GPU:0\n",
-      "\tProcessing image # 0\n",
-      "\tImage shape   : (352, 1216, 3)\n",
-      "\tGT image shape: (352, 1216, 3)\n",
-      "\tLabel shape   : (352, 1216, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:104: DeprecationWarning: `imread` is deprecated!\n",
-      "`imread` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
-      "Use ``imageio.imread`` instead.\n",
-      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:107: DeprecationWarning: `imread` is deprecated!\n",
-      "`imread` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
-      "Use ``imageio.imread`` instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLabel colors :\n",
-      "\t\tColor # 1 :  (255, 0, 0) occurs 332651 times\n",
-      "\t\tColor # 2 :  (255, 0, 255) occurs 95224 times\n",
-      "\t\tColor # 3 :  (0, 0, 0) occurs 157 times\n",
-      "\tFG sum        : 95224\n",
-      "\tBG sum        : 332808\n",
-      "\tGT sum        : 428032 \n",
-      "\n",
-      "\tProcessing image # 1\n",
-      "\tProcessing image # 2\n",
-      "\tProcessing image # 3\n",
-      "\tProcessing image # 4\n",
-      "\n",
-      "Total files processed: 5\n",
-      "\n",
-      "\tProcessing image # 0\n",
-      "\tImage shape   : (352, 1216, 3)\n",
-      "\tGT image shape: (352, 1216, 3)\n",
-      "\tLabel shape   : (352, 1216, 2)\n",
-      "\tLabel colors :\n",
-      "\t\tColor # 1 :  (255, 0, 0) occurs 352337 times\n",
-      "\t\tColor # 2 :  (255, 0, 255) occurs 75695 times\n",
-      "\tFG sum        : 75695\n",
-      "\tBG sum        : 352337\n",
-      "\tGT sum        : 428032 \n",
-      "\n",
-      "\tProcessing image # 1\n",
-      "\tProcessing image # 2\n",
-      "\tProcessing image # 3\n",
-      "\tProcessing image # 4\n",
-      "\n",
-      "Total files processed: 5\n",
-      "\n",
-      "Training batch of images created : (5, 1, 352, 1216, 3)\n",
-      "Training batch of labels created : (5, 1, 352, 1216, 2)\n",
-      "\n",
-      "Testing batch of images created  : (5, 1, 352, 1216, 3)\n",
-      "Testing batch of labels created  : (5, 1, 352, 1216, 2)\n",
-      "\n",
-      "INFO:tensorflow:Restoring parameters from ./data/vgg/variables/variables\n",
-      "WARNING:tensorflow:From <ipython-input-1-b383ae3eaf87>:205: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
-      "\n",
-      "Model build successful, starting training\n",
-      "\n",
-      "Start time          :  2018-11-27 19:26:58.825095\n",
-      "\n",
-      "=================================================\n",
-      "Epoch # 1 in progress\n",
-      "Epoch start time    :  2018-11-27 19:26:58.825095\n",
-      "training   5 .................................................................................................... 100%\n",
-      "Epoch stop time     :  2018-11-27 19:27:11.772120\n",
-      "Epochs completed    :  1\n",
-      "Epoch time          :  12.95  seconds\n",
-      "Iterations done     :  0\n",
-      "Avg. iteration time :  2590.0  ms\n",
-      "Train loss          :  94.74\n",
-      "==============================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --------------------------\n",
     "# Source and reference\n",
@@ -320,9 +219,9 @@
     "\n",
     "    return logits, train_op, loss_op\n",
     "\n",
-    "def train_nn(sess, epochs, batch_size, learning_rate,\n",
+    "def train_nn(sess, epochs, batch_size, learning_rate, image_shape,\n",
     "             training_images, training_labels,\n",
-    "             train_op,cross_entropy_loss,\n",
+    "             logits, train_op, cross_entropy_loss,\n",
     "             image_input_layer, correct_label, keep_prob):\n",
     "    keep_prob_value = 0.5\n",
     "    learning_rate_value = 0.001\n",
@@ -342,19 +241,44 @@
     "        print(\"Epoch #\", (current_epoch + 1), \"in progress\")\n",
     "        print(\"Epoch start time    : \", epoch_start_time)\n",
     "        train_loss = 0\n",
+    "        average_IoU_epoch = 0\n",
     "        for i in range(num_of_batches):   \n",
-    "            loss, _ = sess.run([cross_entropy_loss, train_op],\n",
+    "            # run session to get predictions\n",
+    "            im_softmax, _, loss = sess.run([tf.nn.softmax(logits), train_op, cross_entropy_loss],\n",
     "                               feed_dict={\n",
     "                                   image_input_layer: training_images[i],\n",
     "                                   correct_label: training_labels[i],\n",
     "                                   keep_prob: keep_prob_value,\n",
     "                                   learning_rate: learning_rate_value})\n",
     "            train_loss += loss\n",
+    "            # show progress bar\n",
     "            show_progress(\n",
     "                current_iteration=i,\n",
     "                total_iterations=num_of_batches,\n",
     "                operation_name=\"training  \")\n",
+    "            \n",
+    "            # run session to get predictions\n",
+    "            #im_softmax = sess.run(\n",
+    "            #    [tf.nn.softmax(logits)],\n",
+    "            #    {keep_prob: 1.0, image_pl: [image]})\n",
+    "            \n",
+    "            print(im_softmax.shape)\n",
+    "            \n",
+    "            # foreground is at index 0 of softmax\n",
+    "            im_softmax = im_softmax[:, 0].reshape(image_shape[0], image_shape[1])\n",
+    "            segmentation = (im_softmax > 0.5)\n",
+    "            segmentation = segmentation.reshape(image_shape[0], image_shape[1], 1)\n",
     "\n",
+    "            only_segmentation = np.sum(segmentation)\n",
+    "            gt = testing_labels[i][0][:, :, 0]\n",
+    "            only_gt = np.sum(gt)\n",
+    "            intersection = segmentation.astype(int).ravel().dot(gt.astype(int).ravel())\n",
+    "\n",
+    "            union = only_segmentation + only_gt - intersection\n",
+    "            IoU = round(100.0 * intersection / union, 2)\n",
+    "            average_IoU_epoch += IoU\n",
+    "        average_IoU_epoch = round(average_IoU_epoch/num_of_batches, 2)\n",
+    "            \n",
     "        # stats for current epoch\n",
     "        train_loss = round(train_loss, 2)\n",
     "        #train_accuracy = round(train_accuracy * 100, 2)\n",
@@ -371,7 +295,7 @@
     "        print(\"Iterations done     : \", latest_train_iteration)\n",
     "        print(\"Avg. iteration time : \", avg_iter_time, \" ms\")\n",
     "        print(\"Train loss          : \", train_loss)\n",
-    "        #print(\"Train Accuracy      : \", train_accuracy, \" %\")\n",
+    "        print(\"Average epoch IoU   : \", average_IoU_epoch, \" %\")\n",
     "        print(\"==============================\")\n",
     "\n",
     "# --------------------------\n",
@@ -382,9 +306,7 @@
     "# Download pretrained vgg model\n",
     "helper.maybe_download_pretrained_vgg(data_dir)\n",
     "\n",
-    "# A function to get batches\n",
-    "#get_batches_fn = gen_batch_function(training_dir)\n",
-    "\n",
+    "# create batches from dataset\n",
     "batch_size = 1\n",
     "fg_color = np.array([255, 0, 255])\n",
     "\n",
@@ -433,98 +355,30 @@
     "print(\"Model build successful, starting training\")\n",
     "\n",
     "# Train the neural network\n",
-    "train_nn(global_session, EPOCHS, BATCH_SIZE, learning_rate,\n",
+    "train_nn(global_session, EPOCHS, BATCH_SIZE, learning_rate, IMAGE_SHAPE,\n",
     "         training_images, training_labels,\n",
-    "         train_op, cross_entropy_loss,\n",
+    "         logits, train_op, cross_entropy_loss,\n",
     "         image_input_layer, correct_label, keep_prob)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Finished. Saving test images to: ./runs/1543347838.6689262\n",
-      "(352, 1216)\n",
-      "(352, 1216, 1)\n",
-      "\n",
-      "Test image # 0\n",
-      "\tintersection:  73845\n",
-      "\tonly seg    :  421531\n",
-      "\tonly gt     :  75695\n",
-      "\tunion       :  423381\n",
-      "\tIoU         :  17.44  %\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:59: DeprecationWarning: `toimage` is deprecated!\n",
-      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
-      "Use Pillow's ``Image.fromarray`` directly instead.\n",
-      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:60: DeprecationWarning: `toimage` is deprecated!\n",
-      "`toimage` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
-      "Use Pillow's ``Image.fromarray`` directly instead.\n",
-      "/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:80: DeprecationWarning: `imsave` is deprecated!\n",
-      "`imsave` is deprecated in SciPy 1.0.0, and will be removed in 1.2.0.\n",
-      "Use ``imageio.imwrite`` instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(352, 1216)\n",
-      "(352, 1216, 1)\n",
-      "\n",
-      "Test image # 1\n",
-      "\tintersection:  55232\n",
-      "\tonly seg    :  419879\n",
-      "\tonly gt     :  57156\n",
-      "\tunion       :  421803\n",
-      "\tIoU         :  13.09  %\n",
-      "(352, 1216)\n",
-      "(352, 1216, 1)\n",
-      "\n",
-      "Test image # 2\n",
-      "\tintersection:  80739\n",
-      "\tonly seg    :  421658\n",
-      "\tonly gt     :  83191\n",
-      "\tunion       :  424110\n",
-      "\tIoU         :  19.04  %\n",
-      "(352, 1216)\n",
-      "(352, 1216, 1)\n",
-      "\n",
-      "Test image # 3\n",
-      "\tintersection:  60090\n",
-      "\tonly seg    :  419744\n",
-      "\tonly gt     :  62075\n",
-      "\tunion       :  421729\n",
-      "\tIoU         :  14.25  %\n",
-      "(352, 1216)\n",
-      "(352, 1216, 1)\n",
-      "\n",
-      "Test image # 4\n",
-      "\tintersection:  54886\n",
-      "\tonly seg    :  418968\n",
-      "\tonly gt     :  56865\n",
-      "\tunion       :  420947\n",
-      "\tIoU         :  13.04  %\n",
-      "\n",
-      "\n",
-      "\n",
-      "Average IoU:  0.0\n",
-      "All done!\n"
+     "ename": "NameError",
+     "evalue": "name 'global_session' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-da671a10a3c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;31m# Run the model with the test images and save each painted output image (roads painted green)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m average_IoU = save_inference_samples(global_session, IMAGE_SHAPE, runs_dir,\n\u001b[0m\u001b[1;32m     89\u001b[0m                        \u001b[0mtesting_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtesting_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtesting_image_file_paths\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m                        image_input_layer, logits, keep_prob)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'global_session' is not defined"
      ]
     }
    ],
    "source": [
-    "average_IoU = 0\n",
     "num_of_testing_images = 1\n",
     "def save_inference_samples(sess, image_shape, runs_dir,\n",
     "                           testing_images, testing_labels, testing_image_file_paths,\n",
@@ -541,7 +395,6 @@
     "        :param image_shape: Tuple - Shape of image\n",
     "        :return: Output for for each test image\n",
     "        \"\"\"\n",
-    "        average_IoU = 0\n",
     "        num_of_testing_images = len(testing_images)\n",
     "        for i in range (num_of_testing_images):\n",
     "            # read image, ground truth and filename\n",
@@ -559,11 +412,13 @@
     "                [tf.nn.softmax(logits)],\n",
     "                {keep_prob: 1.0, image_pl: [image]})\n",
     "\n",
-    "            im_softmax = im_softmax[0][:, 1].reshape(image_shape[0], image_shape[1])\n",
+    "            print(\"softmax[0] shape:\", im_softmax[0].shape)\n",
+    "            \n",
+    "            # foreground is at index 0 of softmax\n",
+    "            #im_softmax = im_softmax[0][:, 1].reshape(image_shape[0], image_shape[1])\n",
+    "            im_softmax = im_softmax[0][:, 0].reshape(image_shape[0], image_shape[1])\n",
     "            segmentation = (im_softmax > 0.5)\n",
-    "            print(segmentation.shape)\n",
     "            segmentation = segmentation.reshape(image_shape[0], image_shape[1], 1)\n",
-    "            print(segmentation.shape)\n",
     "\n",
     "            only_segmentation = np.sum(segmentation)\n",
     "            only_gt = np.sum(gt)\n",
@@ -571,7 +426,6 @@
     "\n",
     "            union = only_segmentation + only_gt - intersection\n",
     "            IoU = round(100.0 * intersection / union, 2)\n",
-    "            average_IoU += IoU\n",
     "\n",
     "            print(\"\")\n",
     "            print(\"Test image #\", i)\n",
@@ -586,7 +440,7 @@
     "            result_image = scipy.misc.toimage(image)\n",
     "            result_image.paste(mask, box=None, mask=mask)\n",
     "            #yield os.path.basename(image_file), np.array(result_image)\n",
-    "            yield image_file, np.array(result_image)\n",
+    "            yield image_file, np.array(result_image), IoU\n",
     "    \n",
     "    # Make folder for current run\n",
     "    output_dir = os.path.join(runs_dir, str(time.time()))\n",
@@ -602,18 +456,21 @@
     "        testing_images, testing_labels, testing_image_file_paths,\n",
     "        logits, image_input_layer, keep_prob)\n",
     "    \n",
-    "    for name, image in image_outputs:\n",
+    "    average_IoU = 0.0\n",
+    "    num_of_test_images = 0\n",
+    "    for name, image, IoU in image_outputs:\n",
     "        scipy.misc.imsave(os.path.join(output_dir, name), image)\n",
+    "        average_IoU += IoU\n",
+    "        num_of_test_images += 1\n",
+    "    average_IoU = round(average_IoU/num_of_test_images, 2)\n",
+    "    return average_IoU\n",
     "\n",
     "# Run the model with the test images and save each painted output image (roads painted green)\n",
-    "save_inference_samples(global_session, IMAGE_SHAPE, runs_dir,\n",
+    "average_IoU = save_inference_samples(global_session, IMAGE_SHAPE, runs_dir,\n",
     "                       testing_images, testing_labels, testing_image_file_paths,\n",
     "                       image_input_layer, logits, keep_prob)\n",
-    "\n",
-    "average_IoU = round(average_IoU/num_of_testing_images, 2)\n",
-    "print(\"\\n\\n\")\n",
-    "print(\"Average IoU: \", average_IoU)\n",
-    "print(\"All done!\")"
+    "print(\"\")\n",
+    "print(\"Average IoU: \", average_IoU, \"%\")"
    ]
   },
   {
